# winegame

./: .gitignore  CHANGELOG  CMakeLists.txt  GAMETODO  HEADER  INSTALL  README  TODO  VERSION  about.h  about.ui  autopackage.cpp  autopackage.h  discdetector.cpp  discdetector.h  diskdialog.cpp  diskdialog.h  diskdialog.ui  engine.cpp  engine.h  enginefunc.h  gamedialog.cpp  gamedialog.h  gamedialog.ui  installmanifest.txt  isomaster.cpp  isomaster.h  linux.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plugindialog.cpp  plugindialog.h  plugindialog.ui  prefix.cpp  prefix.h  prefixdialog.cpp  prefixdialog.h  prefixdialog.ui  (+13 more)
debian/: README.Debian  changelog  control  copyright  rules  watch  winegame.dirs
debian/patches/: fixpro.patch
desktop/: winegame.desktop
gentoo/app-emulation/winegame/: Manifest  winegame-0.0.1_rc3.ebuild
gentoo/app-emulation/winegame/files/: fixpro.patch
gentoo/app-emulation/winetricks/: Manifest
gentoo/dev-libs/libwinegame/: Manifest  libwinegame-0.0.1_rc2.ebuild  libwinegame-0.0.1_rc3.ebuild
l10n/: wg_ru.qm  wg_ru.ts
libwinegame/: CMakeLists.txt  FindWineStuff.cmake  corelib.cpp  corelib.h  dvdrunner.cpp  dvdrunner.h  engine.cpp  engine.h  enginefunc.h  libwinegame.pro  libwinegame_global.h  linux.h  poldownloader.cpp  poldownloader.h  prefix.cpp  prefix.h  uiclient.h
libwinegame/debian/: changelog  control  copyright  rules
libwinegame/l10n/: lwg_ru.ts
os/gentoo/app-emulation/winetricks/: winetricks-9999.ebuild
os/gentoo/dev-libs/libwinegame/: libwinegame-0.0.1_rc3.ebuild
progs/wgedit/: Makefile  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_aboutdialog.cpp  moc_mainwindow.cpp  ui_aboutdialog.h  ui_mainwindow.h  wgedit  wgedit.pro
progs/winepkg/: Makefile  main.cpp  winepkg  winepkg.pro
resources/: res.qrc
silenthunter5/: .name  control  icon
src/: CMakeLists.txt  about.cpp  about.h  about.ui  appsettings.cpp  appsettings.h  diskdialog.cpp  diskdialog.h  diskdialog.ui  ejectdialog.cpp  ejectdialog.h  ejectdialog.ui  feedbackdialog.cpp  feedbackdialog.h  feedbackdialog.ui  gamedialog.cpp  gamedialog.h  gamedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagehandler.cpp  messagehandler.h  nextdisc.cpp  nextdisc.h  nextdisc.ui  package.cpp  package.h  packagemodel.cpp  packagemodel.h  plugindialog.cpp  plugindialog.h  plugindialog.ui  prefixdialog.cpp  prefixdialog.h  prefixdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  (+13 more)
src/l10n/: wg_ru.qm  wg_ru.ts
tools/: winetricks  wisotool
